--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "engines": {
     "node": ">=0.6"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/rgulewich/ramsey.git"
+  },
   "main": "./lib/index.js",
   "bin": {
     "ramsey": "bin/ramsey"
